--- a/index2.html
+++ b/index2.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HM2</title>
+    <title>HM</title>
 </head>
 <body>
-    <script src="/index1.js"></script>
+    <script src="/index2.js"></script>
 </body>
 </html>
